force-app/main/default/objects/System_Bill__c/System_Bill__c.object-meta.xml
<CustomObject>
    <label>System Bill</label>
    <nameField>
        <label>System Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>