force-app/main/default/objects/System_Bill__c/fields/Account_Bill__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill__c</fullName>
    <label>Account Bill</label>
    <referenceTo>Account_Bill__c</referenceTo>
    <relationshipLabel>System Bills</relationshipLabel>
    <relationshipName>System_Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>