force-app/main/default/objects/System_Bill__c/fields/Account_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill_Number__c</fullName>
    <formula>Account_Bill__r.Bill_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Bill Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>