force-app/main/default/objects/System_Bill__c/fields/Adjusted_Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total_Billed__c</fullName>
    <description>This is the total a customer was billed this month, including due this month, adjustments, and late fees.</description>
    <formula>Due_This_Month__c +  Adjustments__c + Late_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the total a customer was billed this month, including due this month, adjustments, and late fees.</inlineHelpText>
    <label>Adjusted Total Billed This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>