force-app/main/default/objects/System_Bill__c/fields/Amount_to_Add__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Add__c</fullName>
    <label>XX Amount to Add</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>