force-app/main/default/objects/System_Bill__c/fields/Amount_to_Deduct__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Deduct__c</fullName>
    <label>XX Amount to Deduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>