force-app/main/default/objects/System_Bill__c/fields/Balance_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Balance_Adjustment__c</fullName>
    <label>Balance Adjustments</label>
    <summarizedField>Adjustment_Application__c.Adjustment_Amount__c</summarizedField>
    <summaryForeignKey>Adjustment_Application__c.System_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>