force-app/main/default/objects/System_Bill__c/fields/Balance_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Balance_Adjustments__c</fullName>
    <label>XXBalance Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>