force-app/main/default/objects/System_Bill__c/fields/Balance_Net_Late_Payments__c.field-meta.xml
<CustomField>
    <fullName>Balance_Net_Late_Payments__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Used for collections and days past due. Calculated when bills are generated as Due This Month - Payments Applied</inlineHelpText>
    <label>Balance Net Late Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>