force-app/main/default/objects/System_Bill__c/fields/Balance_Outstanding_61_to_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Balance_Outstanding_61_to_90_Days__c</fullName>
    <description>For AR Aging Report</description>
    <formula>IF(AND(Days_Past_Due__c&gt;60,Days_Past_Due__c&lt;91),Total_Balance_Net_Late_Payments__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For AR Aging Report</inlineHelpText>
    <label>Balance Outstanding 61 to 90 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>