force-app/main/default/objects/System_Bill__c/fields/Balance_Outstanding_Current__c.field-meta.xml
<CustomField>
    <fullName>Balance_Outstanding_Current__c</fullName>
    <description>For AR Aging Report</description>
    <formula>IF(Days_Past_Due__c=0,Total_Balance_Net_Late_Payments__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For AR Aging Report</inlineHelpText>
    <label>Balance Outstanding Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>