force-app/main/default/objects/System_Bill__c/fields/Bill_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Due_Date__c</fullName>
    <formula>IF(Days_in_Bill_Period__c = 0, Date__c + 20, Date__c +  Days_in_Bill_Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Due Date</label>
    <type>Date</type>
</CustomField>