force-app/main/default/objects/System_Bill__c/fields/Carry_Forward_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Adjustments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>XX Carry Forward Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>