force-app/main/default/objects/System_Bill__c/fields/Carry_Forward_Payments__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Payments__c</fullName>
    <label>XX Carry Forward Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>