force-app/main/default/objects/System_Bill__c/fields/Carry_Over_Balance__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Carry Over Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>