force-app/main/default/objects/System_Bill__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Stamped at bill creation with the entity owner&apos;s account</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>System Bills (Client)</relationshipLabel>
    <relationshipName>System_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>