force-app/main/default/objects/System_Bill__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>The Production Update date, set when creating the System Bill</inlineHelpText>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>