force-app/main/default/objects/System_Bill__c/fields/Days_in_Bill_Period__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Bill_Period__c</fullName>
    <label>Days in Bill Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>