force-app/main/default/objects/System_Bill__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <formula>IF(TODAY() - Bill_Due_Date__c &lt;= 0, 0, 
IF( Balance_Net_Late_Payments__c &gt; 1, (TODAY() - Bill_Due_Date__c), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>