force-app/main/default/objects/System_Bill__c/fields/Distribute_This_Balance_as_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Distribute_This_Balance_as_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As of Jan 2019, if we initiate new payment plans with late fees, we&apos;ll likely not handle them correctly (see Richard Ruff)</description>
    <inlineHelpText>As of Jan 2019, we don&apos;t allow new Payment Plans.</inlineHelpText>
    <label>Distribute as Payment Plan? (6 months)</label>
    <type>Checkbox</type>
</CustomField>