force-app/main/default/objects/System_Bill__c/fields/Due_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Due_This_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>New charges calculated this month (not including late fees, adjustments, etc.)</inlineHelpText>
    <label>Due This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>