force-app/main/default/objects/System_Bill__c/fields/Early_Payments__c.field-meta.xml
<CustomField>
    <fullName>Early_Payments__c</fullName>
    <label>XXEarly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>