force-app/main/default/objects/System_Bill__c/fields/Entity_id_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Entity_id_18_digit__c</fullName>
    <formula>CASESAFEID( Entity_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity ID (18 digit)</label>
    <type>Text</type>
</CustomField>