force-app/main/default/objects/System_Bill__c/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <formula>Shared_Solar_System__r.BWC_Project_Entity_Manual__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity ID</label>
    <type>Text</type>
</CustomField>