force-app/main/default/objects/System_Bill__c/fields/Flag_Nearing_Annual_kWH_Cap__c.field-meta.xml
<CustomField>
    <fullName>Flag_Nearing_Annual_kWH_Cap__c</fullName>
    <formula>IF (YTD_kWh_Production__c - Opportunity__r.Product__r.Annual_kWh_Maximum__c &gt; 0, &apos;OVER ANNUAL kWH CAP&apos;,
IF (YTD_kWh_Production__c/Opportunity__r.Product__r.Annual_kWh_Maximum__c &gt; 0.90, &apos;90%-100% of Annual kWh Cap&apos;, 
IF (YTD_kWh_Production__c/Opportunity__r.Product__r.Annual_kWh_Maximum__c &gt; 0.80, &apos;80% - 90% of Annual kWh Cap&apos;,&apos;No Warning&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag: Nearing Annual kWH Cap</label>
    <type>Text</type>
</CustomField>