force-app/main/default/objects/System_Bill__c/fields/Form_ID_Helper__c.field-meta.xml
<CustomField>
    <fullName>Form_ID_Helper__c</fullName>
    <formula>IF( Shared_Solar_System__r.Name == &quot;Fairhaven Mill Rd&quot;, &quot;381491&quot;, IF( Shared_Solar_System__r.Name == &quot;Oxford Clara Barton&quot; , &quot;381520&quot; , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form ID Helper</label>
    <type>Text</type>
</CustomField>