force-app/main/default/objects/System_Bill__c/fields/FormAssembly_Order_Helper__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_Order_Helper__c</fullName>
    <formula>IF(Carry_Over_Balance__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormAssembly Order Helper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>