force-app/main/default/objects/System_Bill__c/fields/Late_Fees__c.field-meta.xml
<CustomField>
    <fullName>Late_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Late Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>