force-app/main/default/objects/System_Bill__c/fields/Late_Payments__c.field-meta.xml
<CustomField>
    <fullName>Late_Payments__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Payments applied after this bill was due.</inlineHelpText>
    <label>Late Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>