force-app/main/default/objects/System_Bill__c/fields/Monthly_Late_Fee_Interest__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Late_Fee_Interest__c</fullName>
    <label>Monthly Late Fee Interest</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>