force-app/main/default/objects/System_Bill__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>System Bills</relationshipLabel>
    <relationshipName>System_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>