force-app/main/default/objects/System_Bill__c/fields/Outstanding_Balance_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_Rollup__c</fullName>
    <formula>(Due_This_Month__c + Late_Fees__c + Adjustments__c + Previous_Overpayment__c ) - Total_Payments_This_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>