force-app/main/default/objects/System_Bill__c/fields/Past_Bill_Payment__c.field-meta.xml
<CustomField>
    <fullName>Past_Bill_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Past Bill Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>