force-app/main/default/objects/System_Bill__c/fields/Payment_is_Pending_Until__c.field-meta.xml
<CustomField>
    <fullName>Payment_is_Pending_Until__c</fullName>
    <formula>Date_of_Last_Payment__c+2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment is Pending Until</label>
    <type>Date</type>
</CustomField>