force-app/main/default/objects/System_Bill__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <formula>IF (Payment_Plan_Balance__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Plan</label>
    <type>Checkbox</type>
</CustomField>