force-app/main/default/objects/System_Bill__c/fields/Payment_Plan_Balance_to_Distribute__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Balance_to_Distribute__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Plan Balance to Distribute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>