force-app/main/default/objects/System_Bill__c/fields/Payments_Net_Previous_Balances__c.field-meta.xml
<CustomField>
    <fullName>Payments_Net_Previous_Balances__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total payments applied this period - Late Payments</inlineHelpText>
    <label>Payments Net Previous Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>