force-app/main/default/objects/System_Bill__c/fields/Previous_Month_Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Overdue_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Month Overdue Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>