force-app/main/default/objects/System_Bill__c/fields/Previous_Overpayment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Overpayment__c</fullName>
    <label>Previous Overpayments</label>
    <summarizedField>Overpayment_Application__c.Overpayment_Amount__c</summarizedField>
    <summaryForeignKey>Overpayment_Application__c.System_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>