force-app/main/default/objects/System_Bill__c/fields/Project_Entity__c.field-meta.xml
<CustomField>
    <fullName>Project_Entity__c</fullName>
    <formula>Shared_Solar_System__r.BWC_Project_Entity_Manual__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Entity</label>
    <type>Text</type>
</CustomField>