force-app/main/default/objects/System_Bill__c/fields/Property_Account__c.field-meta.xml
<CustomField>
    <fullName>Property_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>System Bills</relationshipLabel>
    <relationshipName>System_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>