force-app/main/default/objects/System_Bill__c/fields/Property_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_Account_ID__c</fullName>
    <formula>Property_Account__r.Id</formula>
    <label>Property Account ID</label>
    <type>Text</type>
</CustomField>