force-app/main/default/objects/System_Bill__c/fields/Property_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Account_Name__c</fullName>
    <formula>Property_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Account Name</label>
    <type>Text</type>
</CustomField>