force-app/main/default/objects/System_Bill__c/fields/Recurring_Billing__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Billing</label>
    <type>Checkbox</type>
</CustomField>