force-app/main/default/objects/System_Bill__c/fields/Recurring_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment_ID__c</fullName>
    <formula>Account_Bill__r.Parent_Account__c + &apos; &apos; + Shared_Solar_System__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Payment ID</label>
    <type>Text</type>
</CustomField>