force-app/main/default/objects/System_Bill__c/fields/Refund_this_Balance__c.field-meta.xml
<CustomField>
    <fullName>Refund_this_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XX Add Adjustment</label>
    <type>Checkbox</type>
</CustomField>