force-app/main/default/objects/System_Bill__c/fields/Servicing_on_Behalf_of__c.field-meta.xml
<CustomField>
    <fullName>Servicing_on_Behalf_of__c</fullName>
    <formula>TEXT( Shared_Solar_System__r.Picklist__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicing on Behalf of</label>
    <type>Text</type>
</CustomField>