force-app/main/default/objects/System_Bill__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>System Bills</relationshipLabel>
    <relationshipName>System_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>