force-app/main/default/objects/System_Bill__c/fields/Shared_Solar_System_ID2__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System_ID2__c</fullName>
    <label>Shared Solar System ID2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>