force-app/main/default/objects/System_Bill__c/fields/Shared_Solar_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System_ID__c</fullName>
    <formula>LEFT(Shared_Solar_System_ID2__c,15)</formula>
    <label>Shared Solar System ID</label>
    <type>Text</type>
</CustomField>