force-app/main/default/objects/System_Bill__c/fields/TD_Formula__c.field-meta.xml
<CustomField>
    <fullName>TD_Formula__c</fullName>
    <formula>Total_Due__c - (Due_This_Month__c + Late_Fees__c +  Payment_Plan_Balance__c + Adjustments__c + Previous_Month_Overdue_Balance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TD Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>