force-app/main/default/objects/System_Bill__c/fields/Total_Balance_Net_Late_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Net_Late_Payments__c</fullName>
    <description>Total Balance Net Previous Balance. This takes into account late fees.</description>
    <formula>Total_Due_This_Month__c - Payments_Net_Previous_Balances__c - Late_Fee_Payments__c - Late_Payments__c+ Previous_Overpayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Balance Net Previous Balance. This takes into account late fees.</inlineHelpText>
    <label>Total Balance Net Late Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>