force-app/main/default/objects/System_Bill__c/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Due This Month + Previous Month&apos;s Overdue Balance + Late Fees and Adjustments</inlineHelpText>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>