force-app/main/default/objects/System_Bill__c/fields/Total_Due_Minus_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_Minus_Payment_Plan__c</fullName>
    <formula>Due_This_Month__c + Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due Minus Payment Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>