force-app/main/default/objects/System_Bill__c/fields/Total_Due_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_This_Month__c</fullName>
    <formula>Due_This_Month__c + Late_Fees__c+ Adjustments__c</formula>
    <label>Total Due This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>