force-app/main/default/objects/System_Bill__c/fields/Total_Funds_Applied_to_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Applied_to_Balance__c</fullName>
    <formula>Payments_Net_Previous_Balances__c +  Late_Payments__c + (-1*Previous_Overpayment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funds Applied to Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>