force-app/main/default/objects/System_Bill__c/fields/Total_Payments_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_This_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Payments This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>