force-app/main/default/objects/System_Bill__c/fields/Update_DUmmy__c.field-meta.xml
<CustomField>
    <fullName>Update_DUmmy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update DUmmy</label>
    <type>Checkbox</type>
</CustomField>