force-app/main/default/objects/System_Bill__c/fields/Waive_Late_Fees__c.field-meta.xml
<CustomField>
    <fullName>Waive_Late_Fees__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Waive Late Fees</label>
    <type>Checkbox</type>
</CustomField>