force-app/main/default/objects/System_Bill__c/fields/YTD_Billed__c.field-meta.xml
<CustomField>
    <fullName>YTD_Billed__c</fullName>
    <label>YTD Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>