force-app/main/default/objects/System_Bill__c/fields/YTD_kWh_Production__c.field-meta.xml
<CustomField>
    <fullName>YTD_kWh_Production__c</fullName>
    <label>YTD kWh Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>