force-app/main/default/objects/System_Bill__c/fields/YTD_Payments__c.field-meta.xml
<CustomField>
    <fullName>YTD_Payments__c</fullName>
    <label>YTD Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>