force-app/main/default/objects/System_Bill__c/validationRules/Published_Bill_Adjustments.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Bill_Adjustments</fullName>
    <active>true</active>
    <description>Cannot update Adjustments on an already published bill.</description>
    <errorConditionFormula>AND(
ISCHANGED(Adjustments__c), 
Account_Bill__r.Published__c)</errorConditionFormula>
    <errorMessage>Cannot update Adjustments on an already published bill.</errorMessage>
</ValidationRule>