force-app/main/default/objects/System_Bill__c/validationRules/Published_Bill_Due_This_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Bill_Due_This_Month</fullName>
    <active>true</active>
    <description>Cannot update Due This Month on an already published bill.</description>
    <errorConditionFormula>AND(
ISCHANGED(Due_This_Month__c), 
Account_Bill__r.Published__c)</errorConditionFormula>
    <errorMessage>Cannot update Due This Month on an already published bill.</errorMessage>
</ValidationRule>