force-app/main/default/objects/System_Bill__c/validationRules/Published_Bill_Late_Fees.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Bill_Late_Fees</fullName>
    <active>true</active>
    <description>Cannot update Late Fees on an already published bill.</description>
    <errorConditionFormula>AND(
OR(
ISCHANGED(Late_Fees__c), 
ISCHANGED(Waive_Late_Fees__c)
),
Account_Bill__r.Published__c)</errorConditionFormula>
    <errorMessage>Cannot update Late Fees on an already published bill.</errorMessage>
</ValidationRule>