force-app/main/default/objects/System_Bill__c/validationRules/Published_Bill_Payment_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Bill_Payment_Plan</fullName>
    <active>true</active>
    <description>Cannot update Payment Plan Balance on an already published bill.</description>
    <errorConditionFormula>AND(
ISCHANGED(Payment_Plan_Balance__c),
Account_Bill__r.Published__c)</errorConditionFormula>
    <errorMessage>Cannot update Payment Plan Balance on an already published bill.</errorMessage>
</ValidationRule>