force-app/main/default/objects/System_Bill__c/validationRules/Published_Bill_Previous_Overdue.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Bill_Previous_Overdue</fullName>
    <active>true</active>
    <description>Cannot update Previous Overdue Balance on an already published bill.</description>
    <errorConditionFormula>AND(
ISCHANGED(Previous_Month_Overdue_Balance__c), 
Account_Bill__r.Published__c)</errorConditionFormula>
    <errorMessage>Cannot update Previous Month Overdue Balance on an already published bill.</errorMessage>
</ValidationRule>