force-app/main/default/objects/System_Bill__c/validationRules/Published_Bill_Previous_Overpayments.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Bill_Previous_Overpayments</fullName>
    <active>true</active>
    <description>Cannot update Previous Overpayments on an already published bill.</description>
    <errorConditionFormula>AND(
ISCHANGED(Previous_Overpayment__c), 
Account_Bill__r.Published__c)</errorConditionFormula>
    <errorMessage>Cannot update Previous Month Overpayments on an already published bill.</errorMessage>
</ValidationRule>