force-app/main/default/objects/System_Bill__c/validationRules/Published_Bill_Total_Due.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Bill_Total_Due</fullName>
    <active>true</active>
    <description>Cannot update Total Due on an already published bill.</description>
    <errorConditionFormula>AND(
ISCHANGED(Total_Due__c), 
Account_Bill__r.Published__c)</errorConditionFormula>
    <errorMessage>Cannot update Total Due on an already published bill.</errorMessage>
</ValidationRule>