force-app/main/default/objects/System_Bill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Due_This_Month__c</columns>
    <columns>Carry_Over_Balance__c</columns>
    <columns>Bill_Due_Date__c</columns>
    <columns>Shared_Solar_System__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>